--- a/0-1/assignments-master/week-3/02-jwt/package.json
+++ b/0-1/assignments-master/week-3/02-jwt/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
